# pjecz-perseo-cli

./: .gitignore  README.md  pyproject.toml
config/: settings.py
lib/: database.py  exceptions.py  fechas.py  safe_string.py  universal_mixin.py
perseo/: app.py
perseo/conceptos/: app.py  classes.py  feeders.py  loaders.py
perseo/dispersiones_bancos/: app.py  classes.py  loaders.py  searchers.py
perseo/dispersiones_monederos/: app.py  loaders.py
perseo/municipios/: app.py  classes.py  loaders.py
perseo/nominas/: app.py  classes.py  feeders.py  loaders.py
perseo/pensiones/: app.py
perseo/personas/: classes.py
