[tool.poetry]
name = "pjecz-perseo-cli"
version = "0.1.0"
description = "PJECZ Perseo CLI"
authors = ["Guillermo Valdes <guillermo@movimientolibre.com>"]
license = "AGPL3"
readme = "README.md"
packages = [{include = "pjecz_perseo_cli"}]

[tool.poetry.dependencies]
python = "^3.11"
openpyxl = "^3.1.2"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
requests = "^2.31.0"
rich = "^13.6.0"
typer = "^0.9.0"
unidecode = "^1.3.7"
xlrd = "^2.0.1"
sqlalchemy = "^2.0.22"
sqlalchemy-utils = "^0.41.1"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.1"
black = "^23.9.1"
isort = "^5.12.0"
pytest = "^7.4.2"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"
